[package]
name = "skylines"
description = "A blazingly fast, and dead simple to use modern web framework for anyone."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
